Lazyload for tours and announcement components

--- a/markup/index.html
+++ b/markup/index.html
@@ -101,8 +101,8 @@
       <!-- start /components/announcement.21/-->
       <div class="b-announcement-21 b-announcement">
         <div class="row">
-          <div data-image="/upload/banner6.jpg" class="col-sm-8">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+          <div class="col-sm-8">
+            <div data-original="/upload/banner6.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
               <div class="b-announcement__section">Старушка Европа</div>
               <div class="b-announcement__title">Увидеть Париж</div>
               <div class="b-announcement__type">Прогулки по летнему Парижу</div>
@@ -111,8 +111,8 @@
                  <span class="b-announcement__price__num">76 900 руб.</span>
               </div></a>
           </div>
-          <div data-image="/upload/banner5.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+          <div class="col-sm-4">
+            <div data-original="/upload/banner5.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
               <div class="b-announcement__section">Сказка</div>
               <div class="b-announcement__title">Северное сияние в Исландии</div>
               <div class="b-announcement__type">Туры с авиаперелетом</div>
@@ -127,8 +127,8 @@
       <!-- start /components/announcement.111/-->
       <div class="b-announcement-111 b-announcement">
         <div class="row">
-          <div data-image="/upload/banner2.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+          <div class="col-sm-4">
+            <div data-original="/upload/banner2.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
               <div class="b-announcement__section">Южная америка</div>
               <div class="b-announcement__title">Гаваи, Коста Рика, Куба</div>
               <div class="b-announcement__type">Туры с авиаперелетом. Пляжный отдых</div>
@@ -137,8 +137,8 @@
                  <span class="b-announcement__price__num">266 800 руб.</span>
               </div></a>
           </div>
-          <div data-image="/upload/banner3.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+          <div class="col-sm-4">
+            <div data-original="/upload/banner3.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
               <div class="b-announcement__section">Горные лыжи</div>
               <div class="b-announcement__title">Австрия</div>
               <div class="b-announcement__type">Туры на европейские горнолыжные курорты.</div>
@@ -147,8 +147,8 @@
                  <span class="b-announcement__price__num">106 800 руб.</span>
               </div></a>
           </div>
-          <div data-image="/upload/banner4.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+          <div class="col-sm-4">
+            <div data-original="/upload/banner4.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
               <div class="b-announcement__section">Северная америка</div>
               <div class="b-announcement__title">Путешествие по Аризоне</div>
               <div class="b-announcement__type">Туры с авиаперелетом</div>
@@ -163,8 +163,8 @@
       <!-- start /components/announcement.12/-->
       <div class="b-announcement-12 b-announcement">
         <div class="row">
-          <div data-image="/upload/banner3.jpg" class="col-sm-4">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+          <div class="col-sm-4">
+            <div data-original="/upload/banner3.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
               <div class="b-announcement__section">Старушка Европа</div>
               <div class="b-announcement__title">Увидеть Париж</div>
               <div class="b-announcement__type">Прогулки по летнему Парижу</div>
@@ -173,8 +173,8 @@
                  <span class="b-announcement__price__num">76 900 руб.</span>
               </div></a>
           </div>
-          <div data-image="/upload/banner2.jpg" class="col-sm-8">
-            <div class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
+          <div class="col-sm-8">
+            <div data-original="/upload/banner2.jpg" class="b-announcement__image"></div><a href="/tours/tour/" class="b-announcement__text">
               <div class="b-announcement__section">Сказка</div>
               <div class="b-announcement__title">Северное сияние в Исландии</div>
               <div class="b-announcement__type">Туры с авиаперелетом</div>
