--- a/markup/tours/index.html
+++ b/markup/tours/index.html
@@ -65,11 +65,11 @@
       <!-- start /components/tours.21/-->
       <div class="b-tours-21 b-tours">
         <div class="row">
-          <div data-image="/upload/banner6.jpg" class="col-sm-8">
-            <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+          <div class="col-sm-8">
+            <div data-original="/upload/banner6.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
           </div>
-          <div data-image="/upload/banner5.jpg" class="col-sm-4">
-            <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a>
+          <div class="col-sm-4">
+            <div data-original="/upload/banner5.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a>
           </div>
         </div>
       </div>
@@ -77,11 +77,11 @@
       <!-- start /components/tours.12/-->
       <div class="b-tours-12 b-tours">
         <div class="row">
-          <div data-image="/upload/banner3.jpg" class="col-sm-4">
-            <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a>
+          <div class="col-sm-4">
+            <div data-original="/upload/banner3.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в крым</a>
           </div>
-          <div data-image="/upload/banner2.jpg" class="col-sm-8">
-            <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+          <div class="col-sm-8">
+            <div data-original="/upload/banner2.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
           </div>
         </div>
       </div>
@@ -89,11 +89,11 @@
       <!-- start /components/tours.21/-->
       <div class="b-tours-21 b-tours">
         <div class="row">
-          <div data-image="/upload/banner6.jpg" class="col-sm-8">
-            <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
+          <div class="col-sm-8">
+            <div data-original="/upload/banner6.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Экскурсионные туры в Европу</a>
           </div>
-          <div data-image="/upload/banner5.jpg" class="col-sm-4">
-            <div class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a>
+          <div class="col-sm-4">
+            <div data-original="/upload/banner5.jpg" class="b-tours__image"></div><a href="/tours/tour/" class="b-card-text">Недорогие туры в Крым</a>
           </div>
         </div>
       </div>
