--- a/markup/index.html
+++ b/markup/index.html
@@ -90,6 +90,28 @@
       </div>
     </div>
     <!-- end /components/gallery-banner/-->
+    <div class="b-forms">
+      <div style="background-image: url(/components/gallery-banner/preloader.svg)" class="b-forms__bg">
+        <div class="b-forms__container"><a href="" data-image="http://s.fotorama.io/1.jpg" class="b-forms__image"></a>
+          <div class="container">
+            <div class="b-forms__sq">
+              <div class="row i-unstyled">
+                <div class="col-sm-8 col-sm-offset-2">
+                  <hr class="i-unstyled">
+                  <h2>Название формы</h2>
+                </div>
+              </div>
+              <div class="b-forms__tab hidden-xs">
+                <div style="width: 100%;"><script src="https://c18.travelpayouts.com/content?promo_id=1492&shmarker=31163&countries=0" charset="utf-8" async></script></div>
+              </div>
+              <div class="b-forms__tab visible-xs-block">
+                <div style="width: 300px; background-color: blue;"><script src="https://c18.travelpayouts.com/content?promo_id=1492&shmarker=31163&countries=0" charset="utf-8" async></script></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <section class="container">
       <hr class="i-unstyled i-size-L">
       <div class="b-line-menu">
