--- a/markup/aviatickets/index.html
+++ b/markup/aviatickets/index.html
@@ -77,6 +77,300 @@
           <div style="width: 300px; background-color: blue;"><script charset="utf-8" src="//www.travelpayouts.com/widgets/2e904aed9b11dc04a26ae5f66e4a9820.js?v=767" async></script></div>
         </div>
       </div>
+      <hr class="i-unstyled i-size-L">
+      <div class="b-alfabet">
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2">
+            <h2>Авиабилеты в 220 стран мира</h2>
+          </div>
+        </div>
+        <hr class="i-size-L">
+        <div class="b-alfabet__nav"><a href="" data-id="alfabet1" class="i-active">А</a> <a href="" data-id="alfabet2">Б</a> <a href="" data-id="alfabet3">В</a> <a href="" data-id="alfabet4">Г</a> <a href="" data-id="alfabet5">Д</a> <a href="" data-id="alfabet6">Е</a> <a href="" data-id="alfabet7">З</a> <a href="" data-id="alfabet8">И</a> <a href="" data-id="alfabet9">Й</a> <a href="" data-id="alfabet10">К</a> <a href="" data-id="alfabet11">Л</a> <a href="" data-id="alfabet12">М</a> <a href="" data-id="alfabet13">Н</a> <a href="" data-id="alfabet14">О</a> <a href="" data-id="alfabet15">П</a> <a href="" data-id="alfabet16">Р</a> <a href="" data-id="alfabet17">С</a> <a href="" data-id="alfabet18">Т</a> <a href="" data-id="alfabet19">У</a> <a href="" data-id="alfabet20">Ф</a> <a href="" data-id="alfabet21">Х</a> <a href="" data-id="alfabet22">Ц</a> <a href="" data-id="alfabet23">Ч</a> <a href="" data-id="alfabet24">Ш</a> <a href="" data-id="alfabet25">Э</a> <a href="" data-id="alfabet26">Ю</a> <a href="" data-id="alfabet27">Я</a></div>
+        <hr class="i-unstyled">
+        <div class="b-alfabet__list">
+          <div id="alfabet1" class="row i-active">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Австралия</a></li>
+                <li><a href="">Австрия</a></li>
+                <li><a href="">Азербайджан</a></li>
+                <li><a href="">Аландские острова</a></li>
+                <li><a href="">Албания</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Алжир</a></li>
+                <li><a href="">Американское Самоа</a></li>
+                <li><a href="">Ангилья</a></li>
+                <li><a href="">Ангола</a></li>
+                <li><a href="">Андорра</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Антарктида</a></li>
+                <li><a href="">Антигуа и Барбуда</a></li>
+                <li><a href="">Аргентина</a></li>
+                <li><a href="">Армения</a></li>
+                <li><a href="">Аруба</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Алжир</a></li>
+                <li><a href="">Американское Самоа</a></li>
+                <li><a href="">Ангилья</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet2" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Багамские Острова</a></li>
+                <li><a href="">Бангладеш</a></li>
+                <li><a href="">Барбадос</a></li>
+                <li><a href="">Бахрейн</a></li>
+                <li><a href="">Белиз</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Белоруссия</a></li>
+                <li><a href="">Бельгия</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Бенин</a></li>
+                <li><a href="">Бермуды</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Болгария</a></li>
+                <li><a href="">Боливия</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet3" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Вануату</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Ватикан</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Великобритания</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Венгрия</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet4" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Габон</a></li>
+                <li><a href="">Гаити</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet5" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Дания</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Демократическая Республика Конго</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Джерси</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet6" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Египет</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet7" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Замбия</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Зимбабве</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet8" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Израиль</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet9" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Йемен</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet10" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Кабо-Верде</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Казахстан</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet11" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Лаос</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Латвия</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet12" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Маврикий</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet13" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Намибия</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet14" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Объединённые Арабские Эмираты</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet15" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Палау</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet16" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Реюньон</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet17" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Сан-Марино</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet18" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Тайвань</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet19" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Украина</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet20" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Филиппины</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet21" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Хорватия</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet22" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Центральноафриканская Республика</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet23" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Черногория</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet24" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Швейцария</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet25" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Эквадор</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet26" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Южная Георгия и Южные Сандвичевы острова</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="alfabet27" class="row">
+            <div class="col-sm-3">
+              <ul class="browser">
+                <li><a href="">Ямайка</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
       <hr class="i-unstyled">
     </section>
     <footer class="b-footer">
