--- a/markup/gui/index.html
+++ b/markup/gui/index.html
@@ -7,56 +7,83 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/template/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link rel="stylesheet" href="/template/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/template/template_styles.css">
     <link rel="stylesheet" href="/template/colors.css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:300,400,700&amp;subset=latin,cyrillic" rel="stylesheet">
     <script src="/template/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <script src="/template/materialize.min.js"></script>
     <script src="/template/jscript.js"></script>
   </head>
   <body><div id="bx-panel" style="z-index: 995 !important;">BX Panel</div>
     <header class="b-header">
-      <nav>
-        <div class="container">
-          <div class="nav-wrapper"><a href="/" class="brand-logo left"><img src="/upload/travellers-logo.png" alt="Travellers"></a>
-            <ul class="unstyled b-header-top-menu center hide-on-med-and-down">
-              <li><span href="/tours/" class="i-disabled">Туры</span></li>
-              <li><a href="/aviatickets/">Авиабилеты</a></li>
-              <li><a href="/hotels/">Отели</a></li>
-              <li><a href="/about/">О нас</a></li>
-            </ul>
-            <ul class="unstyled b-header-icons right">
-              <li><a href="#phoneModal" rel="nofollow" class="b-phone-icon modal-trigger"><i></i></a></li>
-              <li><a href="" data-activates="slide-out" rel="nofollow" class="b-header-nav b-menu-icon"><i></i></a></li>
-            </ul>
-            <div id="phoneModal" class="modal"><a href="#!" rel="nofollow" class="modal-action modal-close"></a>
-              <div class="modal-content text-center">
-                <h2>Связаться с нами</h2>
-                <div class="modal-phones"><i class="b-phone-icon"></i>
-                  <div><a href="tel:+88008090100" rel="nofollow">8 800 80 90 100</a></div>
-                  <div><a href="tel:+74953500000" rel="nofollow">+7 495 350 00 00</a></div>
-                  <div><a href="tel:+74953500000" rel="nofollow">+7 495 350 00 00</a></div>
-                </div>
-                <div class="modal-post"><i class="b-post-icon"></i><a href="/request/">Написать нам</a></div>
+      <div class="b-header__container">
+        <nav>
+          <div class="container">
+            <div class="nav-wrapper"><a href="/" class="brand-logo left"><img src="/upload/travellers-logo.png" alt="Travellers"></a>
+              <ul class="unstyled b-header-icons right">
+                <li class="b-header-icons__phone"><a href="tel:88008090100">8 800 80 90 100</a></li>
+                <li><a href="#phoneModal" rel="nofollow" class="b-phone-icon modal-trigger"><i></i></a></li>
+                <li><a href="" data-activates="slide-out" rel="nofollow" class="b-header-nav b-menu-icon"><i></i></a></li>
+              </ul>
+              <div class="b-header-top-menu__wrapper">
+                <ul class="unstyled b-header-top-menu center hide-on-med-and-down">
+                  <li><a href="/countries/">Страны</a></li>
+                  <li><a href="/tours/">Туры</a></li>
+                  <li><a href="/aviatickets/">Авиабилеты</a></li>
+                  <li><a href="/hotels/">Отели</a></li>
+                  <li><span href="/about/" class="i-disabled">О нас</span></li>
+                  <li><a href="/countries/">Страны</a></li>
+                  <li><a href="/tours/">Туры</a></li>
+                  <li><a href="/aviatickets/">Авиабилеты</a></li>
+                  <li><a href="/hotels/">Отели</a></li>
+                  <li><span href="/about/" class="i-disabled">О нас</span></li>
+                </ul>
               </div>
             </div>
-            <ul id="slide-out" class="side-nav unstyled">
-              <li data-activates="slide-out" class="side-nav-back"></li>
-              <li class="side-nav-logo"><a href=""><img src="/upload/travellers-logo.png" alt="Travellers"></a></li>
-              <li><a href="/tours/">Туры</a></li>
-              <li><a href="/aviatickets/">Авиабилеты</a></li>
-              <li><a href="/hotels/">Отели</a></li>
-              <li><a href="/about/">О нас</a></li>
-            </ul>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
+    <div id="phoneModal" class="modal">
+      <div class="b-phone-modal">
+        <div style="background-image: url( '/upload/phone-modal.jpg' );" class="b-phone-modal__ill"></div>
+        <div class="b-phone-modal__text text-center">
+          <div style="background-image: url( '/upload/phone-modal.jpg' );" class="b-phone-modal__cover"></div>
+          <h2>Связаться с&nbsp;нами</h2>
+          <div class="b-phone-modal__address"><b>Наш офис</b><br>Улица Мневники, дом 3,<br>офис 224</div>
+          <div class="b-phone-modal__phones">
+            <div><b><a href="tel:+88008090100" rel="nofollow">8 800 80 90 100</a></b></div>
+            <div><a href="tel:+74953500000" rel="nofollow">+7 495 350 00 00</a></div>
+            <div><a href="tel:+74953500000" rel="nofollow">+7 495 350 00 00</a></div>
+          </div>
+          <div class="b-phone-modal__post"><a href="/request/" class="btn btn-large">Написать нам</a></div>
+          <div class="b-phone-modal__close"><a href="" rel="nofollow" class="modal-close">Закрыть</a></div>
+        </div>
+      </div>
+    </div>
+    <ul id="slide-out" class="side-nav unstyled">
+      <li class="side-nav-logo"><a href=""><img src="/upload/travellers-logo.png" alt="Travellers"></a></li>
+      <li><a href="/tours/">Туры</a></li>
+      <li><a href="/aviatickets/">Авиабилеты</a></li>
+      <li><a href="/hotels/">Отели</a></li>
+      <li><a href="/about/">О нас</a></li>
+    </ul>
     <section class="container">
+      <hr class="unstyled">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
+          <h1>Buttons</h1>
+          <div class="btn btn-large">Large button</div>
+          <div class="btn btn-small">Small button</div>
+          <h1><span>Button inside heading</span>
+            <div class="btn btn-small">The button</div>
+          </h1>
+          <h1 class="b-relative">
+            <div style="background-image: url( '/template/images/instagram.svg' );" class="b-heading-icon"></div>An icon before heading
+          </h1>
+          <hr>
           <h1>Туристическая компания</h1>
           <p>S7 Airlines (бренд авиакомпании «Сибирь») обладает широкой сетью внутренних маршрутов, выстроенной на базе авиатранспортных узлов в Москве (Домодедово) и Новосибирске (Толмачёво). S7 Airlines также выполняет <a href="">регулярные</a> полеты в страны СНГ, Европу, Ближний Восток, Юго-Восточную Азию и страны Азиатско-Тихоокеанского региона.</p>
           <h2>Заголовок</h2>
